# AgriSense-Sustainable-Agriculture

./: .dockerignore  .dockerignore.azure  .env.azure.dev.example  .env.azure.prod.example  .env.pocketdb  .env.production.optimized  .env.production.template  .gitignore  .pip_freeze.txt  100_CROP_UPGRADE_COMPLETE.md  ARCHITECTURE_DIAGRAM.md  AZURE_DEPLOYMENT_QUICKSTART.md  AZURE_ERRORS_FIXED.md  AZURE_FREE_TIER_DEPLOYMENT.md  AZURE_READINESS_SUMMARY.md  BACKEND_104_CROP_UPDATE.md  BACKEND_INTEGRATION_GUIDE.md  CLEANUP_AND_ORGANIZATION_SUMMARY.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE_REPORT_20251224.md  CLEANUP_REPORT_20251205_182951.md  CLEANUP_SUMMARY_QUICK.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  COMPREHENSIVE_PROJECT_EVALUATION.md  CRITICAL_FIXES_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CLEANUP_REPORT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY_DEC_28_2025.md  Dockerfile  Dockerfile.azure  Dockerfile.frontend  Dockerfile.frontend.azure  Dockerfile.huggingface  Dockerfile.optimized  Dockerfile.production  ENV_VARS_REFERENCE.md  FILES_CREATED_AND_MODIFIED.md  FINAL_VALIDATION_REPORT.md  FIREBASE_POUCHDB_DEPLOYMENT.md  (+127 more)
agrisense-data-generation/: README.md  pyproject.toml  requirements.txt
agrisense-data-generation/configs/: generation_config.yaml
agrisense-data-generation/src/: __init__.py  main.py
agrisense-data-generation/src/augmentation/: __init__.py  image_augmentor.py  transforms.py  utils.py
agrisense-data-generation/src/generators/: __init__.py  crop_data.py  (+3 more)
agrisense-data-generation/tests/: test_augmentation.py  test_generators.py
(+976 files in other folders)
